trunk/yanl/examples/t1/correct/0700_char_literal_basic.yanl
program char_literal;
var c:char;
begin
c:='a';
end.