trunk/yanl/examples/t1/fail/0601_spaces_between_quotes.yanl
program me;
var s:array[1..7] of char;
begin
s:="asdf" "jkl";
end.